--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
-    <string name="app_name">Unscramble</string>
-    <string name="instructions">Unscramble the word using all the letters.</string>
-    <string name="skip">Skip</string>
-    <string name="submit">Submit</string>
-    <string name="score">Score: %d</string>
-    <string name="word_count">%d of 10 words</string>
-    <string name="enter_your_word">Enter your word</string>
-    <string name="congratulations">Congratulations!</string>
-    <string name="you_scored">"You scored: %d"</string>
-    <string name="exit">Exit</string>
-    <string name="play_again">Play Again</string>
+    <string name="app_name">Расшифруй</string>
+    <string name="instructions">Расшифруй слово, используя все буквы</string>
+    <string name="skip">Пропустить</string>
+    <string name="submit">Проверить</string>
+    <string name="score">Счет: %d</string>
+    <string name="word_count">%d из 10 слов</string>
+    <string name="enter_your_word">введите свое слово</string>
+    <string name="congratulations">Бинго!</string>
+    <string name="you_scored">"Ваш счет: %d"</string>
+    <string name="exit">Выход</string>
+    <string name="play_again">Сыграть снова</string>
+    <string name="wrong_guess">Не угадал!</string>
 </resources>
